--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-body{font:14px "Lucida Grande",Helvetica,Arial,sans-serif}a{color:#00B7FF}#map{height:580px}.circle{border-radius:50%;width:2px;height:2px;background-color:#3182bd}
+body{font:14px "Lucida Grande",Helvetica,Arial,sans-serif}a{color:#00B7FF}#map{height:580px}.circle{background-image:url(../images/radio.svg);background-size:20px 20px}.axis path,.axis line{fill:none;stroke:#000;shape-rendering:crispEdges}.x.axis path{display:none}.line{fill:none;stroke:steelblue;stroke-width:1.5px}.tick text{font-size:10px}
